Cact/kernel/core/kernel.h

// Forward declarations for exception frame and process metadata
struct context_frame;
void dump_context_frame(struct context_frame* regs, uint32_t fault_addr, uint32_t signal);
// Read CR2 (page fault linear address)
static inline uint32_t read_cr2(void) {
    uint32_t val;
    __asm__ __volatile__("mov %%cr2, %0" : "=r"(val));
    return val;
}
// Get current page directory pointer (CR3)
static inline uint32_t* get_current_pd(void) {
    uint32_t val;
    __asm__ __volatile__("mov %%cr3, %0" : "=r"(val));
    return (uint32_t*)val;
}
// Task scheduling
struct task_struct;
void                 schedule      (void);
struct task_struct*  create_task   (void (*entry_point)(void));
extern struct task_struct* volatile current_task;