Cact/kernel/memory/memory.h

extern void load_page_directory(uint32_t* directory);
extern void enable_paging(void);