Cact/kernel/memory/rust_mm/src/ffi.rs


    pub fn load_page_directory(dir: *mut u32);
    pub fn enable_paging();

    pub fn read_vfs(node: *mut VfsNode, off: u32, size: u32, buf: *mut u8) -> i32;

    pub static current_task: SyncMut<*mut TaskStruct>;
    pub static task_list_head: SyncMut<*mut TaskStruct>;
    pub static scheduler_lock: SyncMut<IrqSpinlock>;

    pub fn task_signal(pid: u32, signal: u32);
    pub fn schedule();
    pub fn task_reap();

    pub fn dump_context_frame(regs: *const ContextFrame, fault_addr: u32, signal: u32);
}

// ---------------------------------------------------------------------------
// Inline-asm helpers — encapsulated in safe functions
// ---------------------------------------------------------------------------

/// Read CR2 (page-fault address).
#[inline(always)]
pub fn read_cr2() -> u32 {
    let val: u32;
    // SAFETY: reading CR2 is side-effect-free.
    unsafe { core::arch::asm!("mov {}, cr2", out(reg) val, options(nomem, nostack)) };
    val
}

/// Read CR3 (current page directory).
#[inline(always)]
pub fn get_current_pd() -> *mut u32 {
    let val: u32;
    // SAFETY: reading CR3 is side-effect-free.
    unsafe { core::arch::asm!("mov {}, cr3", out(reg) val, options(nomem, nostack)) };
    val as *mut u32
}

/// Invalidate a single TLB entry.
#[inline(always)]
pub fn tlb_flush(vaddr: u32) {
    // SAFETY: INVLPG is safe for any address.
    unsafe { core::arch::asm!("invlpg [{}]", in(reg) vaddr, options(nostack)) };
}

/// Flush the entire TLB by reloading CR3.
#[inline(always)]
pub fn tlb_flush_all() {
    // SAFETY: reloading CR3 with the current value only flushes the TLB.
    unsafe {
        core::arch::asm!(
            "mov eax, cr3",
            "mov cr3, eax",
            out("eax") _,
            options(nostack)
        );
    }
}